--- a/index.html
+++ b/index.html
@@ -1,103 +1,153 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
     <title>WebStudio</title>
-</head>
-<body>
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
+  <body>
     <!-- header  -->
-    <header>
-        <a href="index.html"><span>Web</span>Studio</a> 
-        <nav>
-            <ul>
-                <li>
-<a href="index.html">Студія</a>
-                </li>
-                <li>
-<a href="#">Портофоліо</a>
-                </li>
-                <li>
-<a href="#">Контакти</a>
-                </li>
-            </ul>
+    <header class="header">
+      <div class="container">
+        <nav class="navigation">
+          <a class="logo" href="index.html"><span>Web</span>Studio</a>
+          <ul class="navigation-list">
+            <li class="navigation-item">
+              <a class="navigation-link" href="index.html">Студія</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Портофоліо</a>
+            </li>
+            <li class="navigation-item">
+              <a class="navigation-link" href="#">Контакти</a>
+            </li>
+          </ul>
         </nav>
-        <ul>
-            <li>
-<a href=""></a>
-            </li>
-            <li>
-<a href="tel:+380961111111">+38 096 111 11 11</a>
-
-
-            </li>
+        <ul class="contacts">
+          <li class="contacts-item">
+            <a class="contacts-link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contacts-item">
+            <a class="contacts-link" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
-        
-    </header> 
-<!-- main -->
+      </div>
+    </header>
+    <!-- main -->
     <main>
-        <!-- section -->
-<section>
-<h1>Ефективні рішення для вашого бізнесу</h1>
-<button>Замовити послугу</button>
-
-</section>
-<!-- переваги -->
-<section>
-    <ul>
-        <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3> 
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
-        </li>
-    </ul>
-</section> 
-<!-- чим ми займаємось --> 
-<section>
-    <h2>ПУНКТУАЛЬНІСТЬ</h2> 
-    <ul>
-        <li>
-<img src="" alt="">
-        </li>
-        <li>
-<img src="" alt="">
-        </li>
-        <li>
-<img src="" alt="">
-        </li>
-    </ul>
-</section> 
-<!-- команда --> 
-<section>
-    <h2>Наша команда</h2> 
-    <ul>
-        <li>
-<img src="" alt=""> 
-<div>
-    <h3></h3>
-<p></p>
-    
-</div>
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-        <li>
-
-        </li>
-    </ul>
-</section>
-    </main> 
-    <!-- Footer --> 
-    <footer>
-        <a href=""></a> 
-        <address>
-            <a href="#">м. Київ, пр-т Лесі Українки, 26</a> 
-            <a href=""></a> 
-            <a href=""></a>
+      <!-- section -->
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <button class="hero-btn">Замовити послугу</button>
+        </div>
+      </section>
+      <!-- переваги -->
+      <section class="benefits">
+        <div class="container">
+          <ul class="benefits-list">
+            <li class="benefits-item">
+              <h3 class="benefits-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+              <p class="benefits-text">
+                Ідейні міркування, і навіть початок повсякденної роботи з
+                формування позиції.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">ПУНКТУАЛЬНІСТЬ</h3>
+              <p class="benefits-text">
+                Завдання організації, особливо рамки і місце навчання кадрів
+                тягне у себе.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">ПЛАНУВАННЯ</h3>
+              <p class="benefits-text">
+                Так само консультація з широким активом значною мірою зумовлює.
+              </p>
+            </li>
+            <li class="benefits-item">
+              <h3 class="benefits-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+              <p class="benefits-text">
+                Значимість цих проблем настільки очевидна, що реалізація
+                планових завдань.
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- чим ми займаємось -->
+      <section class="work">
+        <div class="container">
+          <h2 class="title">Чим ми займаємося</h2>
+          <ul class="work-list">
+            <li class="work-item">
+              <img class="work-img" src="img/img (1).png" alt="" />
+            </li>
+            <li class="work-item">
+              <img class="work-img" src="img/img (9).png" alt="" />
+            </li>
+            <li class="work-item">
+              <img class="work-img" src="img/img (2).png" alt="" />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <!-- команда -->
+      <section class="team">
+        <div class="container">
+          <h2 class="title">Наша команда</h2>
+          <ul class="team-list">
+            <li class="team-item">
+              <img class="team-img" src="img/img (3).png" alt="" />
+              <div class="team-wrap">
+                <h3 class="team-name">Ігор Дем'яненко</h3>
+                <p class="team-position">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img class="team-img" src="img/img (4).png" alt="" />
+              <div class="team-wrap">
+                <h3 class="team-name">Ольга Рєпіна</h3>
+                <p class="team-position">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img class="team-img" src="img/img (5).png" alt="" />
+              <div class="team-wrap">
+                <h3 class="team-name">Микола Тарасов</h3>
+                <p class="team-position">Marketing</p>
+              </div>
+            </li>
+            <li class="team-item">
+              <img class="team-img" src="img/img (6).png" alt="" />
+              <div class="team-wrap">
+                <h3 class="team-name">Михайло Єрмаков</h3>
+                <p class="team-position">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <a class="footer-logo" href="index.html">Web<span>Studio</span></a>
+        <address class="address">
+          <a class="address-name" href="#">м. Київ, пр-т Лесі Українки, 26</a>
+          <a class="address-link" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
