--- a/img/index.html
+++ b/img/index.html
@@ -18,7 +18,7 @@
               <a class="navigation-link" href="index.html">Студія</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Портофоліо</a>
+              <a class="navigation-link" href="http://127.0.0.1:5500/img/portfolio.html">Портофоліо</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">Контакти</a>
