--- a/menu/portfolio.html
+++ b/menu/portfolio.html
@@ -123,9 +123,7 @@
             </div>
           </li>
         </ul>
-
-
-            
+                   
         </div>
     </section>
     </main>
@@ -135,8 +133,7 @@
         <address class="address">
           <a class="address-name" href="#">м. Київ, пр-т Лесі Українки, 26</a>
           <a class="address-link" href="mailto:info@devstudio.com"
-            >info@devstudio.com</a
-          >
+            >info@devstudio.com</a>
           <a class="address-link" href="tel:+380961111111">+38 096 111 11 11</a>
         </address>
       </div>
