--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
           <a class="logo" href="index.html"><span>Web</span>Studio</a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="index.html">Студія</a>
+              <a class="navigation-link" href="./index.html">Студія</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="http://127.0.0.1:5500/menu/portfolio.html">Портофоліо</a>
+              <a class="navigation-link" href="./portfolio.html">Портофоліо</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">Контакти</a>
