--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,10 @@
           <a class="logo" href="index.html"><span>Web</span>Studio</a>
           <ul class="navigation-list">
             <li class="navigation-item">
-              <a class="navigation-link" href="index.html">Студія</a>
+              <a class="navigation-link" href="./index.html">Студія</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link" href="#">Портофоліо</a>
+              <a class="navigation-link" href="./portfolio.html">Портофоліо</a>
             </li>
             <li class="navigation-item">
               <a class="navigation-link" href="#">Контакти</a>
