--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -16,7 +16,7 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a class="logo" href="index.html"><span>Web</span>Studio</a>
+          <a class="logo" href="index.html">Web<span class="logo-black">Studio</span></a>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link" href="./index.html">Студія</a>
@@ -48,7 +48,7 @@
       <!-- section -->
       <section class="hero">
         <div class="container">
-          <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+          <h1 class="hero-title">Ефективні рішення для<br> вашого бізнесу</h1>
           <button class="hero-btn">Замовити послугу</button>
         </div>
       </section>
@@ -143,7 +143,7 @@
     <!-- Footer -->
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="index.html">Web<span>Studio</span></a>
+        <a class="footer-logo" href="index.html">Web<span class="footer-span">Studio</span></a>
         <address class="address">
           <a class="address-name" href="#">м. Київ, пр-т Лесі Українки, 26</a>
           <a class="address-link" href="mailto:info@devstudio.com"
