--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
@@ -15,7 +15,7 @@
     <header class="header">
       <div class="container">
         <nav class="navigation">
-          <a class="logo" href="index.html"><span>Web</span>Studio</a>
+          <a class="logo" href="index.html">Web<span class="logo-black">Studio</span></a>
           <ul class="navigation-list">
             <li class="navigation-item">
               <a class="navigation-link" href="./index.html">Студія</a>
@@ -45,85 +45,85 @@
 
     <main>
       <section class="portfolio">
-        <ul>
-        <li>
-          <button>Усі</button>
+        <ul class="filter">
+        <li class="filter-item">
+          <button class="portfolio-button">Усі</button>
         </li>
-        <li>
-          <button>Веб-сайти</button>
+        <li class="filter-item">
+          <button class="portfolio-button">Веб-сайти</button>
         </li>
-        <li>
-          <button>Додатки</button>
+        <li class="filter-item">
+          <button class="portfolio-button">Додатки</button>
         </li>
-        <li>
-          <button>Дизайн</button>
+        <li class="filter-item">
+          <button class="portfolio-button">Дизайн</button>
         </li>
-        <li>
-          <button>Маркетинг</button>
+        <li class="filter-item">
+          <button class="portfolio-button">Маркетинг</button>
         </li>
         </ul> 
-        <ul>
-          <li>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
             <img src="./img/portfolio (1).png" alt="state1">
-            <div>
-              <h3>Технокряк</h3>
-              <p>Веб-сайт</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Технокряк</h3>
+              <p class="portfolio-text">Веб-сайт</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio (3).png" alt="state1">
-            <div>
-              <h3>Постер New Orlean vs Golden Star</h3>
-              <p>Дизайн</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+              <p class="portfolio-text">Дизайн</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio (9).png" alt="state1"> 
-            <div>
-              <h3>Ресторан Seafood</h3>
-              <p>Додаток</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Ресторан Seafood</h3>
+              <p class="portfolio-text">Додаток</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio (4).png" alt="state1">
-            <div>
-              <h3>Проєкт Prime</h3> 
-              <p>Маркетинг</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Проєкт Prime</h3> 
+              <p class="portfolio-text">Маркетинг</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio (5).png" alt="state1">
-            <div>
-              <h3>Проєкт Boxes</h3>
-              <p>Додаток</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Проєкт Boxes</h3>
+              <p class="portfolio-text">Додаток</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio (6).png" alt="state1">
-            <div>
-              <h3>Inspiration has no Borders</h3> 
-              <p>Веб-сайт</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Inspiration has no Borders</h3> 
+              <p class="portfolio-text">Веб-сайт</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio(7).png" alt="state1"> 
-            <div>
-              <h3>Видання Limited Edition</h3>
-              <p>Дизайн</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Видання Limited Edition</h3>
+              <p class="portfolio-text">Дизайн</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio (8).png" alt="state1">
-            <div>
-              <h3>Проєкт LAB</h3> 
-              <p>Маркетинг</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Проєкт LAB</h3> 
+              <p class="portfolio-text">Маркетинг</p>
             </div>
           </li>
-          <li>
+          <li class="portfolio-item">
             <img src="./img/portfolio (2).png" alt="state1">
-            <div>
-              <h3>Growing Business</h3> 
-              <p>Додаток</p>
+            <div class="portfolio-wrap">
+              <h3 class="portfolio-title">Growing Business</h3> 
+              <p class="portfolio-text">Додаток</p>
             </div>
           </li>
         </ul>
@@ -133,7 +133,7 @@
     </main>
     <footer class="footer">
       <div class="container">
-        <a class="footer-logo" href="index.html">Web<span>Studio</span></a>
+        <a class="footer-logo" href="index.html">Web<span class="footer-span">Studio</span></a>
         <address class="address">
           <a class="address-name" href="#">м. Київ, пр-т Лесі Українки, 26</a>
           <a class="address-link" href="mailto:info@devstudio.com"
