--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- header  -->
     <header class="header">
-      <div class="container">
+      <div class="container header-wrap">
         <nav class="navigation">
           <a class="logo" href="index.html">Web<span class="logo-black">Studio</span></a>
           <ul class="navigation-list">
@@ -92,7 +92,7 @@
           <h2 class="title">Чим ми займаємося</h2>
           <ul class="work-list">
             <li class="work-item">
-              <img class="work-img" src="img/img (1).png" alt="" />
+              <img class="work-img" src="img/img.png" alt="" />
             </li>
             <li class="work-item">
               <img class="work-img" src="img/img (9).png" alt="" />
